# Snapbot

./: .gitignore  CMakeLists.txt  README.md  package.xml
3D printing STL/: Body - cover_V4-1.STL  Body - cover_top_V4-1.STL  Camera_bracket_1.STL  Camera_bracket_2.STL  Camera_cover.STL  Camera_module - Camera_plate4-1.STL  Leg_Assembly_Y-P_V4 - Leg_part_01_yaw_V4-1.STL  Leg_Assembly_Y-P_V4 - Leg_part_06_V4-1.STL  Leg_Assembly_Y-P_V4 - v4_Hyb_X-430_IDLE_uncut_V4-1.STL  Leg_Assembly_Y-P_V4 - v4_Hyb_X-430_IDLE_uncut_V4-2.STL  Leg_part_02.STL  Leg_part_03.STL  Leg_part_04.STL  Leg_part_05.STL
MATLAB Simulation/Simscape_2leg/: Leg_part_02_Yaw_Default_sldprt.STEP  Leg_part_05_Default_sldprt.STEP  Leg_part_06_Default_sldprt.STEP  SnapbotParameters.asv  SnapbotParameters_2leg.m  Snapbot_2leg.slx  floor_Default_sldprt.STEP
MATLAB Simulation/Simscape_4leg/: Leg_part_01_yaw_Default_sldprt.STEP  Leg_part_06_Default_sldprt.STEP  Motion.m  SnapbotParameters.m  Snapbot_4_leg.slx  (+1 more)
ROS_Package/: README.md
Snapbot_V2.0_URDF/: CMakeLists.txt  package.xml
URDF/: CMakeLists.txt  package.xml
config/: snapbot.rviz
include/: snapbot_functions.h
launch/: display.launch  gazebo.launch  snapbot.launch
meshes/: Camera_module_1.STL  Leg_module_1_2.STL  Leg_module_1_4bar.STL  Leg_module_2_1.STL  Leg_module_2_2.STL  Leg_module_2_3.STL  Leg_module_2_4.STL  Leg_module_2_4bar.STL  Leg_module_3_3.STL  Leg_module_4_3.STL  Leg_module_5_3.STL  Leg_module_6_2.STL  Leg_module_6_3.STL  Leg_module_6_4bar.STL
src/: snapbot_functions.cpp  snapbot_main.cpp
urdf/: snapbot.csv  snapbot.urdf
(+5262 files in other folders)
